Fix image width on mobile

--- a/src/components/apod/style.css
+++ b/src/components/apod/style.css
@@ -7,6 +7,7 @@
 }
 .apod img {
   max-width: 700px;
+  width: 100%;
 }
 .apod p {
   line-height: 1.5em;
